--- a/addGroup.xaml
+++ b/addGroup.xaml
@@ -6,7 +6,7 @@
         <TextBox Height="23" HorizontalAlignment="Left" Margin="111,44,0,0" Name="textBox1" VerticalAlignment="Top" Width="120" />
         <TextBox Height="23" HorizontalAlignment="Left" Margin="111,144,0,0" Name="textBox2" VerticalAlignment="Top" Width="120" />
         <Label Content="Podaj nazwę " Height="28" HorizontalAlignment="Left" Margin="12,48,0,0" Name="label1" VerticalAlignment="Top" />
-        <Label Content="Wpisz delimeter" Height="28" HorizontalAlignment="Left" Margin="12,148,0,0" Name="label2" VerticalAlignment="Top" />
+        <Label Content="Wpisz delimiter" Height="28" HorizontalAlignment="Left" Margin="12,148,0,0" Name="label2" VerticalAlignment="Top" />
         <Label Content="Ścieżka do pliku:" Height="28" HorizontalAlignment="Left" Margin="12,182,0,0" Name="label3" VerticalAlignment="Top" />
         <TextBox Height="23" HorizontalAlignment="Left" Margin="111,178,0,0" Name="textBox3" VerticalAlignment="Top" Width="120" IsEnabled="True" IsReadOnly="True" />
         <Button Content="..." Height="23" HorizontalAlignment="Left" Margin="237,178,0,0" Name="button1" VerticalAlignment="Top" Width="40" Click="button1_Click" />
