--- a/App.xaml
+++ b/App.xaml
@@ -3,6 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-        <ResourceDictionary Source="/ReuxablesLegacy;component/frog.xaml" />
+        <ResourceDictionary Source="/ReuxablesLegacy;component/mercury.xaml" />
     </Application.Resources>
 </Application>
