--- a/ChartWindow.xaml
+++ b/ChartWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:oxy="http://oxyplot.codeplex.com"
         xmlns:local="clr-namespace:MultiLanguage"
-        Title="Statystyki" Height="372" Width="531">
+        Title="Statystyki" Height="372" Width="531" ResizeMode="CanMinimize">
 
     <Grid Height="334" Width="507">
         <Grid.RowDefinitions>
