--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,40 +1,35 @@
 ﻿<Window x:Class="MultiLanguage.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Language Worker 1.0" Height="350" Width="525">
+        Title="Language Worker 1.0.1" Height="350" Width="525" Topmost="False" ResizeMode="CanMinimize" Icon="/MultiLanguage;component/1391883054_104617.ico">
     <Grid>
         <DockPanel>
-            <Menu DockPanel.Dock="Top">
-                <MenuItem Header="_File">
-                    <MenuItem Header="_Open"/>
-                    <MenuItem Header="_Close"/>
-                    <MenuItem Header="_Save"/>
-                </MenuItem>
-            </Menu>
+            <Menu DockPanel.Dock="Top"></Menu>
             <StackPanel>
-                <TabControl Height="290" Name="tabControl1" Width="499">
+                <TabControl Height="310" Name="tabControl1" Width="497">
                     <TabItem Header="Zarządzanie" Name="tabItem1">
                         <Grid>
-                            <ListBox Height="155" HorizontalAlignment="Left" Margin="14,25,0,0" Name="listBox1" VerticalAlignment="Top" Width="455" SelectionChanged="listBox1_SelectionChanged" />
+                            <ListBox Height="197" HorizontalAlignment="Left" Margin="14,25,0,0" Name="listBox1" VerticalAlignment="Top" Width="455" SelectionChanged="listBox1_SelectionChanged" />
                             <Label Content="Aktualnie dodane zestawy:" Height="28" HorizontalAlignment="Left" Margin="172,6,0,0" Name="label1" VerticalAlignment="Top" />
-                            <Button Content="Dodaj zestaw" Height="23" HorizontalAlignment="Left" Margin="14,199,0,0" Name="button1" VerticalAlignment="Top" Width="75" Click="button1_Click" />
-                            <Button Content="Wyczyść zestaw" Height="23" HorizontalAlignment="Left" Margin="194,199,0,0" Name="button2" VerticalAlignment="Top" Width="87" Click="button2_Click" />
-                            <Button Content="Usuń zestaw" Height="23" HorizontalAlignment="Left" Margin="394,199,0,0" Name="button3" VerticalAlignment="Top" Width="75" Click="button3_Click" />
+                            <Button Content="Dodaj zestaw" Height="23" HorizontalAlignment="Left" Margin="14,237,0,0" Name="button1" VerticalAlignment="Top" Width="75" Click="button1_Click" />
+                            <Button Content="Wyczyść zestaw" Height="23" HorizontalAlignment="Left" Margin="194,237,0,0" Name="button2" VerticalAlignment="Top" Width="87" Click="button2_Click" />
+                            <Button Content="Usuń zestaw" Height="23" HorizontalAlignment="Left" Margin="394,237,0,0" Name="button3" VerticalAlignment="Top" Width="75" Click="button3_Click" />
                         </Grid>
                     </TabItem>
                     <TabItem Header="Nauka" Name="tabItem2">
                         <Grid>
-                            <ListBox Height="140" HorizontalAlignment="Left" Margin="38,28,0,0" Name="listBox2" VerticalAlignment="Top" Width="413" SelectionChanged="listBox2_SelectionChanged" SelectionMode="Multiple" />
-                            <Label Content="Zaznacz zestawy których chcesz się nauczyć:" Height="28" HorizontalAlignment="Left" Margin="130,14,0,0" Name="label2" VerticalAlignment="Top" />
-                            <RadioButton Content="Nauka do bólu" Height="16" HorizontalAlignment="Left" Margin="38,182,0,0" Name="radioButton1" VerticalAlignment="Top" GroupName="style" IsChecked="True" />
-                            <RadioButton Content="Nauka w formie testu" Height="16" HorizontalAlignment="Left" Margin="176,182,0,0" Name="radioButton2" VerticalAlignment="Top" GroupName="style" />
-                            <RadioButton Content="Nauka początkowa" Height="16" HorizontalAlignment="Left" Margin="342,182,0,0" Name="radioButton3" VerticalAlignment="Top" GroupName="style" />
-                            <Button Content="Rozpocznij naukę" Height="24" HorizontalAlignment="Left" Margin="176,220,0,0" Name="button4" VerticalAlignment="Top" Width="108" Click="button4_Click" />
+                            <ListBox Height="163" HorizontalAlignment="Left" Margin="38,28,0,0" Name="listBox2" VerticalAlignment="Top" Width="413" SelectionChanged="listBox2_SelectionChanged" SelectionMode="Extended" />
+                            <Label Content="Zaznacz zestawy których chcesz się nauczyć (ctrl+klik aby zaznaczyć więcej):" Height="28" HorizontalAlignment="Left" Margin="64,6,0,0" Name="label2" VerticalAlignment="Top" />
+                            <RadioButton Content="Nauka do bólu" Height="16" HorizontalAlignment="Left" Margin="363,197,0,0" Name="radioButton1" VerticalAlignment="Top" GroupName="style" IsChecked="False" />
+                            <RadioButton Content="Nauka w formie testu" Height="16" HorizontalAlignment="Left" Margin="193,197,0,0" Name="radioButton2" VerticalAlignment="Top" GroupName="style" />
+                            <RadioButton Content="Nauka początkowa" Height="16" HorizontalAlignment="Left" Margin="38,197,0,0" Name="radioButton3" VerticalAlignment="Top" GroupName="style" IsChecked="True" IsThreeState="False" />
+                            <Button Content="Rozpocznij naukę" Height="45" HorizontalAlignment="Left" Margin="184,228,0,0" Name="button4" VerticalAlignment="Top" Width="122" Click="button4_Click" />
                         </Grid>
                     </TabItem>
                     <TabItem Header="Przegląd postępów" Name="tabItem3">
                         <Grid>
-                            <ListBox Height="207" HorizontalAlignment="Left" Margin="19,40,0,0" Name="listBox3" VerticalAlignment="Top" Width="449" />
+                            <ListBox Height="207" HorizontalAlignment="Left" Margin="19,40,0,0" Name="listBox3" VerticalAlignment="Top" Width="449" SelectedIndex="0" />
+                            <Label Content="Aby wyswietlić postęp nauki, kliknij dwa razy na grupie" Height="28" HorizontalAlignment="Left" Margin="100,16,0,0" Name="label3" VerticalAlignment="Top" />
                         </Grid>
                     </TabItem>
                 </TabControl>
