--- a/addGroup.xaml
+++ b/addGroup.xaml
@@ -1,7 +1,8 @@
 ﻿<Window x:Class="MultiLanguage.addGroup"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Dodaj grupę" Height="413" Width="324" Loaded="Window_Loaded">
+        Title="Dodaj grupę" Height="413" Width="324" Loaded="Window_Loaded" ResizeMode="CanMinimize" Topmost="False">
+    
     <Grid Height="365" Width="288">
         <TextBox Height="23" HorizontalAlignment="Left" Margin="111,44,0,0" Name="textBox1" VerticalAlignment="Top" Width="120" />
         <TextBox Height="23" HorizontalAlignment="Left" Margin="111,144,0,0" Name="textBox2" VerticalAlignment="Top" Width="120" />
