--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="MultiLanguage.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Language Worker 1.0.1" Height="350" Width="525" Topmost="False" ResizeMode="CanMinimize" Icon="/MultiLanguage;component/1391883054_104617.ico">
+        Title="Language Worker 1.2.4" Height="350" Width="525" Topmost="False" ResizeMode="CanMinimize" Icon="/MultiLanguage;component/1391883054_104617.ico">
     <Grid>
         <DockPanel>
             <Menu DockPanel.Dock="Top"></Menu>
@@ -24,6 +24,10 @@
                             <RadioButton Content="Nauka w formie testu" Height="16" HorizontalAlignment="Left" Margin="193,197,0,0" Name="radioButton2" VerticalAlignment="Top" GroupName="style" />
                             <RadioButton Content="Nauka początkowa" Height="16" HorizontalAlignment="Left" Margin="38,197,0,0" Name="radioButton3" VerticalAlignment="Top" GroupName="style" IsChecked="True" IsThreeState="False" />
                             <Button Content="Rozpocznij naukę" Height="45" HorizontalAlignment="Left" Margin="184,228,0,0" Name="button4" VerticalAlignment="Top" Width="122" Click="button4_Click" />
+                            <ComboBox Height="21" HorizontalAlignment="Left" Margin="38,240,0,0" Name="comboBox1" VerticalAlignment="Top" Width="139" ItemsSource="{Binding}" IsEditable="False">
+                                <ComboBoxItem Content="Z polskiego na obcy" IsSelected="True" />
+                                <ComboBoxItem Content="Z obcego na polski" />
+                            </ComboBox>
                         </Grid>
                     </TabItem>
                     <TabItem Header="Przegląd postępów" Name="tabItem3">
